--- a/Twitter.App/Twitter.App.csproj
+++ b/Twitter.App/Twitter.App.csproj
@@ -189,7 +189,10 @@
     <Compile Include="Models\BindingModels\EditUserProfileBindingModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ViewModels\NotificationViewModel.cs" />
+    <Compile Include="Models\ViewModels\TweetDetailsViewModel.cs" />
     <Compile Include="Models\ViewModels\TweetIndexViewModel.cs" />
+    <Compile Include="Models\ViewModels\UserFollowerViewModel.cs" />
+    <Compile Include="Models\ViewModels\UserInfoViewModel.cs" />
     <Compile Include="Models\ViewModels\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -250,15 +253,16 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Home\profile.cshtml" />
+    <Content Include="Views\Users\profile.cshtml" />
     <Content Include="Views\Notifications\Index.cshtml" />
     <Content Include="Views\Notifications\Details.cshtml" />
+    <Content Include="Views\Tweets\Reply.cshtml" />
+    <Content Include="Views\Shared\_UserInfo.cshtml" />
+    <Content Include="Views\Users\profileFollow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Base\" />
-    <Folder Include="Views\Tweets\" />
-    <Folder Include="Views\Users\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
